# cmake_sample

./: CMakeLists.txt  README.md  main.c
libraries/adder/: adder.c  adder.h
libraries/divider/: divider.c  divider.h
libraries/multiplier/: CMakeLists.txt  multiplier.c  multiplier.h
libraries/subtractor/: subtractor.c  subtractor.h
